tests/dependent/should_fail/T15859.hs
{-# Language PolyKinds          #-}
{-# Language TypeApplications   #-}
{-# Language LiberalTypeSynonyms #-}

module T15859 where

import Data.Kind

a = (undefined :: forall k -> k -> Type) @Int

