tests/dependent/should_fail/T15859.stderr

T15859.hs:9:19: error: [GHC-51580]
    • Illegal visible, dependent quantification in the type of a term:
        forall k -> k -> *
    • In an expression type signature: forall k -> k -> Type
      In the expression: (undefined :: forall k -> k -> Type) @Int
      In an equation for ‘a’:
          a = (undefined :: forall k -> k -> Type) @Int
    Suggested fix:
      Perhaps you intended to use the ‘RequiredTypeArguments’ extension
